--- a/install
+++ b/install
@@ -2,7 +2,8 @@ if ! [ -v SSH_CLIENT ]; then
 echo "Enter new password for Root"
 passwd
 sshd
-echo "Termux SSH port 8022"
+echo "Connect to Termux using SSH port 8022 and restart the installation from there"
+exit 0
 fi
 
 termux-wake-lock
